# ivm

./: .gitignore  LICENSE  README.md  ivm-architecture.md  ivm-brief.md  ivm-build-plan.md  ivm-related-work.md  ivm-sql-frontend.md  pyproject.toml
.github/workflows/: ci.yml
bench/: benchmark.py  results.json
docs/: paper-outline.md
examples/: live_dashboard.py
ivm/: __init__.py  cost_model.py  engine.py  operators.py  oracle.py  plan.py  row.py  sql.py  view.py  zset.py
ivm/adapters/: __init__.py  inproc.py  sqlite.py
tests/: conftest.py  harness.py  test_aggregate.py  test_bench_smoke.py  test_cost_model.py  test_demo.py  test_distinct.py  test_filter.py  test_full_join.py  test_inproc_adapter.py  test_join.py  test_join_deletes.py  test_left_join.py  test_oracle_equivalence.py  test_outer_join_adversarial.py  test_project.py  test_public_api.py  test_right_join.py  test_self_join.py  test_serialization.py  test_serialization_adversarial.py  test_sql.py  test_sql_distinct_having.py  test_sql_vs_sqlite.py  test_sqlite_adapter.py  test_state_size.py  test_view_integration.py
